Add About us and Contact us pages

--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,36 +28,37 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+        <h1>About Us</h1>
+        <p>Welcome to Star Auto Deals, where your dream car becomes a reality. As a leading car dealership in North America, we pride ourselves on offering an extensive range of both domestic and imported vehicles at competitive prices. Our mission is to provide our customers with a seamless car-buying experience, combining exceptional customer service with high-quality vehicles. Whether you’re looking for a reliable family car, a luxury sedan, or a rugged SUV, we’ve got you covered.</p>
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://t3.ftcdn.net/jpg/02/43/12/34/360_F_243123463_zTooub557xEWABDLk0jJklDyLSGl2jrr.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">John Peterson</p>
+          <p>General Manager</p>
+          <p class="card-text">John has over 20 years of automotive industry experience, leading our team with a focus on excellence. His commitment to customer satisfaction drives everything we do.</p>
+          <p>john-peterson@starautodeals.com.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://www.shutterstock.com/image-photo/young-handsome-man-beard-wearing-600nw-1768126784.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">David Brown</p>
+          <p>Service Manager</p>
+          <p class="card-text">David ensures every vehicle is in peak condition before it leaves our lot. With his engineering background and attention to detail, your car is in expert hands.</p>
+          <p>david-brown@starautodeals.com.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://media.istockphoto.com/id/1369508766/photo/beautiful-successful-latin-woman-smiling.jpg?s=612x612&w=0&k=20&c=LoznG6eGT42_rs9G1dOLumOTlAveLpuOi_U755l_fqI=" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Emily Rogers</p>
+          <p>Sales Manager</p>
+          <p class="card-text">Emily excels at connecting customers with their perfect vehicles. Her dedication to building lasting relationships makes her a trusted guide in the car-buying process.</p>
+          <p>emily-rogers@starautodeals.com.com</p>
         </div>
       </div>
     </div>
